Add faux sound control v3.6
Change-Id: Iccfc00397e7f537f1f748b8695d7de2b899ff699

--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -904,4 +904,10 @@ config SND_SOC_TFA9896
 	help
 	TFA9896 driver
 
+config SOUND_CONTROL_HAX_3_GPL
+	tristate "new wcd93xx sound control hax"
+	default y
+	help
+	  FauxSound WCD93xx chipset sound control hacks 3.0 for deeper hax
+
 endmenu
