--- a/drivers/video/msm/mdss/Makefile
+++ b/drivers/video/msm/mdss/Makefile
@@ -79,6 +79,7 @@ obj-$(CONFIG_COMPAT) += mdss_compat_utils.o
 # Samsung lcd common driver
 obj-$(CONFIG_FB_MSM_MDSS_SAMSUNG) += samsung/
 obj-$(CONFIG_FB_MSM_MDSS_KCAL_CTRL) += mdss_mdp_kcal_ctrl.o
++msm_drm-$(CONFIG_KLAPSE) += sde/klapse.o
 
 # LiveDisplay
 obj-$(CONFIG_FB_MSM_MDSS) += mdss_livedisplay.o
