--- a/arch/arm/boot/dts/qcom/msm8917-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8917-regulator.dtsi
@@ -515,7 +515,7 @@
 		interrupts = <0 15 0>;
 		regulator-name = "apc_corner";
 		regulator-min-microvolt = <1>;
-		regulator-max-microvolt = <5>;
+		regulator-max-microvolt = <10>;
 
 		qcom,cpr-fuse-corners = <3>;
 		qcom,cpr-voltage-ceiling = <1155000 1225000 1350000>;
@@ -552,17 +552,32 @@
 					<70 54 7 0>;
 		qcom,cpr-fuse-quot-offset-scale = <5 5 5>;
 		qcom,cpr-init-voltage-step = <10000>;
-		qcom,cpr-corner-map = <1 2 3 3 3>;
+		qcom,cpr-corner-map = <1 2 3 3 3 3 3 3 3 3>;
+		qcom,cpr-voltage-ceiling-override =
+				<0xffffffff 0xffffffff 1050000 1120000 1200000 1200000 1200000
+						       1225000 1350000 1350000 1350000 1350000>;
+		qcom,cpr-voltage-floor-override =
+				<0xffffffff 0xffffffff 1050000 1050000 1090000 1090000 1090000
+						       1150000 1200000 1200000 1200000 1200000>;
 		qcom,cpr-corner-frequency-map =
+				<1 200000000>,
+				<1 400000000>,
+				<1 533000000>,
+				<1 800000000>,
 				<1 960000000>,
 				<2 1094400000>,
 				<3 1248000000>,
 				<4 1401000000>,
-				<5 1497600000>;
+				<5 1497600000>,
+				<6 1574400000>,
+				<7 1651200000>,
+				<8 1708800000>,
+				<9 1804800000>,
+				<10 1958400000>;
 		qcom,speed-bin-fuse-sel = <37 34 3 0>;
 		qcom,cpr-speed-bin-max-corners =
-					<0 (-1) 1 2 4>,
-					<1 (-1) 1 2 5>;
+					<0 (-1) 1 2 10>,
+					<1 (-1) 1 2 10>;
 		qcom,cpr-quot-adjust-scaling-factor-max = <0 1400 1400>;
 		qcom,cpr-voltage-scaling-factor-max = <0 2000 2000>;
 		qcom,cpr-scaled-init-voltage-as-ceiling;
@@ -577,19 +592,19 @@
 			<(-1)     5      2    (-1)    (-1)    (-1)>,
 			<(-1)   (-1)   (-1)   (-1)    (-1)    (-1)>;
 		qcom,cpr-quotient-adjustment =
-				<50      40        50>,
-				<0       0         40>,
-				<50      40       100>,
-				<50      40        50>,
-				<0       0        100>,
-				<0       0         50>,
+				<50      40        80>,
+				<0       0         70>,
+				<50      40       150>,
+				<50      40        80>,
+				<0       0        150>,
+				<0       0         80>,
 				<0       0          0>;
 		qcom,cpr-init-voltage-adjustment =
-				<30000   5000   10000>,
+				<30000   5000   15000>,
 				<0       0          0>,
-				<30000   5000   35000>,
-				<30000   5000   10000>,
-				<0       0      20000>,
+				<30000   5000   40000>,
+				<30000   5000   15000>,
+				<0       0      25000>,
 				<0       0	    0>,
 				<0       0          0>;
 		qcom,cpr-enable;
