--- a/arch/arm/configs/j2y18lte_defconfig
+++ b/arch/arm/configs/j2y18lte_defconfig
@@ -34,8 +34,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-MacTavishAO"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-❤️❤️  Psychic❤️Kernel  ❤️❤️"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
@@ -1262,7 +1262,7 @@ CONFIG_ARCH_MIGHT_HAVE_PC_PARPORT=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 CONFIG_ZRAM=y
-# CONFIG_ZRAM_LZ4_COMPRESS is not set
+CONFIG_ZRAM_LZ4_COMPRESS=y
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
@@ -3595,7 +3595,7 @@ CONFIG_ION_MSM=y
 # CONFIG_LUSTRE_FS is not set
 # CONFIG_DGAP is not set
 # CONFIG_GS_FPGABOOT is not set
-CONFIG_VNSWAP=y
+# CONFIG_VNSWAP is not set
 # CONFIG_GOLDFISH is not set
 
 #
