--- a/arch/arm/configs/j2y18lte_defconfig
+++ b/arch/arm/configs/j2y18lte_defconfig
@@ -2736,6 +2736,8 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_KLAPSE=y
 # CONFIG_SAMSUNG_DEBUG_DISPLAY is not set
 CONFIG_FB_MSM_MDSS_SAMSUNG=y
 # CONFIG_DISPLAY_USE_INFO is not set
